--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,9 @@ buildscript {
         maven { url = "https://storage.googleapis.com/r8-releases/raw" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath 'com.android.tools:r8:1.5.62'
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
+        classpath 'com.android.tools.build:gradle:4.0.2'
+        classpath 'com.android.tools:r8:2.1.67'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.9'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -241,15 +241,15 @@ allprojects {
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:${SUPPORT_LIBS_VERSION}"
-    implementation "com.android.support:cardview-v7:${SUPPORT_LIBS_VERSION}"
-    implementation "com.android.support:design:${SUPPORT_LIBS_VERSION}"
-    implementation "com.android.support:support-v4:${SUPPORT_LIBS_VERSION}"
-    implementation "com.android.support:support-dynamic-animation:${SUPPORT_LIBS_VERSION}"
-    implementation "com.android.support:recyclerview-v7:${SUPPORT_LIBS_VERSION}"
-    implementation "com.android.support:palette-v7:${SUPPORT_LIBS_VERSION}"
-    implementation "com.android.support:preference-v7:${SUPPORT_LIBS_VERSION}"
-    implementation "com.android.support:preference-v14:${SUPPORT_LIBS_VERSION}"
+    implementation "com.android.support:appcompat-v7:28.0.0-alpha1"
+    implementation "com.android.support:cardview-v7:28.0.0-alpha1"
+    implementation "com.android.support:design:28.0.0-alpha1"
+    implementation "com.android.support:support-v4:28.0.0-alpha1"
+    implementation "com.android.support:support-dynamic-animation:28.0.0-alpha1"
+    implementation "com.android.support:recyclerview-v7:28.0.0-alpha1"
+    implementation "com.android.support:palette-v7:28.0.0-alpha1"
+    implementation "com.android.support:preference-v7:28.0.0-alpha1"
+    implementation "com.android.support:preference-v14:28.0.0-alpha1"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     implementation 'com.github.florent37:fiftyshadesof:1.0.0'
