--- a/quickstep/AndroidManifest.xml
+++ b/quickstep/AndroidManifest.xml
@@ -19,7 +19,6 @@
 -->
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.android.launcher3" >
 
     <uses-sdk android:targetSdkVersion="28" android:minSdkVersion="28"/>
@@ -46,36 +45,36 @@
 
         <!-- STOPSHIP: Change exported to false once all the integration is complete.
         It is set to true so that the activity can be started from command line -->
-        <activity android:name="com.android.quickstep.RecentsActivity"
-            android:exported="true"
-            android:excludeFromRecents="true"
-            android:launchMode="singleTask"
-            android:clearTaskOnLaunch="true"
-            android:stateNotNeeded="true"
-            android:theme="@style/LauncherTheme"
-            android:screenOrientation="unspecified"
-            android:configChanges="keyboard|keyboardHidden|mcc|mnc|navigation|orientation|screenSize|screenLayout|smallestScreenSize"
-            android:resizeableActivity="true"
-            android:resumeWhilePausing="true"
-            android:taskAffinity="" />
+<!--        <activity android:name="com.android.quickstep.RecentsActivity"-->
+<!--            android:exported="true"-->
+<!--            android:excludeFromRecents="true"-->
+<!--            android:launchMode="singleTask"-->
+<!--            android:clearTaskOnLaunch="true"-->
+<!--            android:stateNotNeeded="true"-->
+<!--            android:theme="@style/LauncherTheme"-->
+<!--            android:screenOrientation="unspecified"-->
+<!--            android:configChanges="keyboard|keyboardHidden|mcc|mnc|navigation|orientation|screenSize|screenLayout|smallestScreenSize"-->
+<!--            android:resizeableActivity="true"-->
+<!--            android:resumeWhilePausing="true"-->
+<!--            android:taskAffinity="" />-->
 
         <!-- Content provider to settings search -->
-        <provider
-            android:name="com.android.quickstep.LauncherSearchIndexablesProvider"
-            android:authorities="${applicationId}"
-            android:grantUriPermissions="true"
-            android:multiprocess="true"
-            android:permission="android.permission.READ_SEARCH_INDEXABLES"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.content.action.SEARCH_INDEXABLES_PROVIDER" />
-            </intent-filter>
-        </provider>
+<!--        <provider-->
+<!--            android:name="com.android.quickstep.LauncherSearchIndexablesProvider"-->
+<!--            android:authorities="${applicationId}"-->
+<!--            android:grantUriPermissions="true"-->
+<!--            android:multiprocess="true"-->
+<!--            android:permission="android.permission.READ_SEARCH_INDEXABLES"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.content.action.SEARCH_INDEXABLES_PROVIDER" />-->
+<!--            </intent-filter>-->
+<!--        </provider>-->
 
 
-        <service
-            android:name="com.android.launcher3.uioverrides.dynamicui.WallpaperManagerCompatVL$ColorExtractionService"
-            tools:node="remove" />
+<!--        <service-->
+<!--            android:name="com.android.launcher3.uioverrides.dynamicui.WallpaperManagerCompatVL$ColorExtractionService"-->
+<!--            tools:node="remove" />-->
 
     </application>
 
