--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-import org.gradle.api.tasks.wrapper.Wrapper.DistributionType
+//import org.gradle.api.tasks.wrapper.Wrapper.DistributionType
 
 buildscript {
     ext.kotlin_version = '1.4.10'
@@ -18,7 +18,7 @@ buildscript {
 tasks {
     wrapper {
         gradleVersion = "5.5.1"
-        distributionType = DistributionType.ALL
+//        distributionType = DistributionType.ALL
     }
 }
 
@@ -53,7 +53,7 @@ android {
         buildConfigField "boolean", "FEATURE_SETTINGS_SEARCH", "true"
         buildConfigField "boolean", "DEBUG_STRICT_MODE", "false"
         buildConfigField "boolean", "HAS_LEAKCANARY", "false"
-        buildConfigField "boolean", "FEATURE_BUG_REPORTER", "true"
+        buildConfigField "boolean", "FEATURE_BUG_REPORTER", "false"
 
 
 
@@ -108,18 +108,6 @@ android {
     flavorDimensions "default", "custom"
 
     productFlavors {
-//        aosp {
-//            dimension "default"
-//            applicationId 'ch.deletescape.keyOS.Launcher'
-//            testApplicationId 'com.android.launcher3.tests'
-//        }
-//
-//        l3go {
-//            dimension "default"
-//            applicationId 'com.android.launcher3'
-//            testApplicationId 'com.android.launcher3.tests'
-//        }
-
         quickstep {
             dimension "default"
             applicationId 'tech.DevAsh.keyOS'
@@ -130,7 +118,7 @@ android {
 
             buildConfigField "boolean", "HAS_LEAKCANARY", "false"
             buildConfigField "boolean", "DEBUG_STRICT_MODE", "false"
-            buildConfigField "boolean", "FEATURE_BUG_REPORTER", "true"
+            buildConfigField "boolean", "FEATURE_BUG_REPORTER", "false"
         }
 
         keyOS {
