--- a/keyOS/AndroidManifest.xml
+++ b/keyOS/AndroidManifest.xml
@@ -107,34 +107,154 @@
 
     <uses-permission android:name="${applicationId}.permission.BROADCAST_BUGREPORT"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-
     <uses-permission android:name="xyz.paphonb.systemuituner.permission.MODIFY_NAVBAR"/>
 
+    <uses-permission
+        android:name="android.permission.WRITE_SETTINGS"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission
+        android:name="android.permission.PACKAGE_USAGE_STATS"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission
+        android:name="android.permission.MODIFY_PHONE_STATE"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS" />
+    <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SET_WALLPAPER" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.PREVENT_POWER_KEY" />
+    <uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES" />
+
     <application
-        android:theme="@style/keyOS"
         android:name="tech.DevAsh.Launcher.KioskApp">
-
-
         <activity
-            android:name="tech.DevAsh.Launcher.SplashScreen"
-            android:launchMode="singleTask"
-            android:clearTaskOnLaunch="true"
-            android:theme="@style/splashScreen"
-            android:stateNotNeeded="true"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="unspecified"
-            android:configChanges="keyboard|keyboardHidden|mcc|mnc|navigation|orientation|screenSize|screenLayout|smallestScreenSize"
-            android:resizeableActivity="true"
-            android:resumeWhilePausing="true"
-            android:taskAffinity=""
-            android:enabled="true">
+            android:theme="@style/keyOS"
+            android:name="tech.DevAsh.KeyOS.Config.ActivityList" />
+        <activity
+            android:theme="@style/keyOS"
+            android:name="tech.DevAsh.KeyOS.Config.EditApp" />
+        <activity
+            android:theme="@style/keyOS"
+            android:name="tech.DevAsh.KeyOS.Config.Mode" />
+        <activity
+            android:theme="@style/keyOS"
+            android:name="tech.DevAsh.KeyOS.Helpers.KioskHelpers.PasswordPrompt"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name="tech.DevAsh.KeyOS.Config.Password"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:theme="@style/keyOS"
+            android:name="tech.DevAsh.KeyOS.Config.ContactsInput"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:theme="@style/keyOS"
+            android:name="tech.DevAsh.KeyOS.Config.ContactList" />
+        <activity
+            android:theme="@style/keyOS"
+            android:name="tech.DevAsh.KeyOS.Config.PhoneCalls" />
+        <activity
+            android:theme="@style/keyOS"
+            android:name="tech.DevAsh.KeyOS.Config.PhoneBook"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:theme="@style/keyOS"
+            android:name="tech.DevAsh.KeyOS.Helpers.KioskHelpers.HelperLauncher"
+            android:enabled="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.HOME" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.LAUNCHER"/>
-                <category android:name="android.intent.category.LAUNCHER_APP"/>
+            </intent-filter>
+        </activity> <!-- launcher -->
+        <activity
+            android:theme="@style/keyOS"
+            android:name="tech.DevAsh.KeyOS.Config.Permissions" />
+
+        <activity
+            android:theme="@style/keyOS"
+            android:name="tech.DevAsh.KeyOS.Config.AllowApps" />
+        <activity
+            android:theme="@style/keyOS"
+            android:name="tech.DevAsh.KeyOS.Config.Settings"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name="tech.DevAsh.KeyOS.SplashScreen"
+            android:theme="@style/splashScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="tech.DevAsh.KeyOS.Services.UsageAccessService"
+            android:exported="true"
+            android:process=":externalProcess" />
+
+        <receiver
+            android:name="tech.DevAsh.KeyOS.Receiver.ActivityChangeReceiver"
+            android:enabled="true"
+            android:exported="true"
+            />
+        <receiver
+            android:name="tech.DevAsh.KeyOS.Receiver.PhoneCallReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE" />
+                <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="tech.DevAsh.KeyOS.Receiver.SampleAdminReceiver"
+            android:description="@string/app_name"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_DEVICE_ADMIN">
+            <meta-data
+                android:name="android.app.device_admin"
+                android:resource="@xml/device_admin_receiver" />
+
+            <intent-filter>
+                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name="tech.DevAsh.KeyOS.Services.WindowChangeDetectingService"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibilityservice"
+                android:screenOrientation="portrait" />
+        </service>
+
+
+
+<!--        end keyOS-->
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
 
         <activity
