--- a/build.gradle
+++ b/build.gradle
@@ -251,7 +251,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    
+    implementation 'com.github.danimahardhika:cafebar:1.3.1'
 
 }
 
